# EO-vs-CMIP-GHG-forcings-comparison

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: MAKEFILE  create_csv_files.py  preprocess-CMIP7-GHG-forcings.py  preprocess.py  preprocess_data.py
eo_vs_cmip_ghg_forcings_comparison.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
old/: CMIP7-v1.0.0.ipynb  cosine-weighting.ipynb  missing-data.ipynb
old/src/: missing_data_analysis.py  utils.py  utils_preprocessing.py
src/: cosine_weighting.py  preprocessing.py  relative_change.py  utils_plotting.py  utils_preprocessing.py
src_plotting/: missing_data_analysis.py  utils_plotting.py  utils_preprocessing.py
tests/integration_test/: test_processing.py
tests/unittest/: test_compare_coverage.py  test_preprocessing.py  test_weighting.py
tutorials/: CMIP7-v1.0.0.ipynb  cosine-weighting.ipynb  getting-started_ch4.ipynb  getting-started_co2.ipynb  missing-data.ipynb
